src/test/compile-fail/while-expr.rs
// xfail-stage0
// error-pattern: precondition constraint

fn main() {
  let bool x;
  while(x) {
  }
}
